--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Hello World!" />
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
+    <com.example.greendaodecoder.views.RedFameLayout
+        android:layout_width="400dp"
+        android:background="@color/red"
+        android:layout_height="400dp">
+        <com.example.greendaodecoder.views.GreenFrameLayout
+            android:layout_width="200dp"
+            android:background="@color/green"
+            android:layout_height="200dp">
+            <com.example.greendaodecoder.views.YellowView
+                android:layout_width="100dp"
+                android:background="@color/yellow"
+                android:layout_height="100dp"/>
+        </com.example.greendaodecoder.views.GreenFrameLayout>
+    </com.example.greendaodecoder.views.RedFameLayout>
 </RelativeLayout>
