--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
 
-    <com.example.greendaodecoder.views.RedFameLayout
-        android:layout_width="400dp"
-        android:background="@color/red"
-        android:layout_height="400dp">
-        <com.example.greendaodecoder.views.GreenFrameLayout
-            android:layout_width="200dp"
-            android:background="@color/green"
-            android:layout_height="200dp">
-            <com.example.greendaodecoder.views.YellowView
-                android:layout_width="100dp"
-                android:background="@color/yellow"
-                android:layout_height="100dp"/>
-        </com.example.greendaodecoder.views.GreenFrameLayout>
-    </com.example.greendaodecoder.views.RedFameLayout>
+    android:paddingLeft="50dp"
+    android:paddingTop="100dp"
+    android:paddingRight="50dp"
+    android:paddingBottom="100dp"
+    tools:context="com.example.greendaodecoder.MainActivity">
+
+
+    <!-- 获取网站的标题-->
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <!--开始加载提示-->
+    <TextView
+        android:id="@+id/text_beginLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:text="" />
+
+    <!--获取加载进度-->
+    <TextView
+        android:id="@+id/text_Loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_beginLoading"
+        android:text="" />
+
+    <!--结束加载提示-->
+    <TextView
+        android:id="@+id/text_endLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_Loading"
+        android:text="" />
+
+    <!--显示网页区域-->
+    <WebView
+        android:id="@+id/webView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/text_endLoading"
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
