解决DataBinding编译不过的问题

--- a/app/src/main/res/layout/jetpack_activity_layout.xml
+++ b/app/src/main/res/layout/jetpack_activity_layout.xml
@@ -27,6 +27,6 @@
             android:id="@+id/tv_usr_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{()->user.onClick}" />
+            android:onClick="@{()->user.onClick()}" />
     </LinearLayout>
 </layout>
